--- a/css/layout.css
+++ b/css/layout.css
@@ -314,6 +314,7 @@ button {
     box-shadow: 0px 0 3px rgba(0,0,0, 0.1) inset;
     cursor: pointer;
     color: #606060;
+    border-radius: 2px;
 }
 
 button:hover {
