--- a/css/login.css
+++ b/css/login.css
@@ -75,6 +75,7 @@ body {
     box-shadow: 0px 0 3px rgba(0,0,0, 0.1) inset;
     cursor: pointer;
     color: #606060;
+    border-radius: 2px;
 }
 
 .link {
