--- a/css/layout.css
+++ b/css/layout.css
@@ -154,8 +154,8 @@ a:hover, a:active, a:focus {
     width: 100%;
     position: fixed;
     background-color: #ffc28b;
-    border-bottom: 1px solid #ffaa5e;
-    box-shadow: 0 0 8px rgba(0,0,0, 0.4);
+    border-bottom: 1px solid #ffaa1e;
+    box-shadow: 0 2px 5px rgba(0,0,0, 0.25);
     z-index: 50;
 }
 
