--- a/css/invoice.css
+++ b/css/invoice.css
@@ -14,6 +14,7 @@
 }
 
 body {
+    -webkit-print-color-adjust: exact;
     font: 100%/1.4 "Segoe UI Light", "Segoe UI", "Tahoma", "Arial", "Verdana", "sans-serif";
     margin: 0;
     padding: 0;
@@ -22,31 +23,39 @@ body {
     color: #272727;
 }
 
-.invoice {
-    width: 800px;
-    padding: 20px 30px;
+ul {
+    margin: 0;
+}
+
+.invoice-wrapper {
+    width: 1060px;
     border: 1px solid #e0e0e0;
-    box-shadow: 0 1px 3px rgba(0,0,0, 0.2);
+    box-shadow: 0 1px 3px rgba(0,0,0, 0.2); 
+}
+.invoice {
+    width: 1000px;
+    padding: 20px 30px !important;
     clear: both;
+    border-bottom: 1px dashed #000 !important;
 }
 
 .company-header {
     position: relative;
-    width: 800px;
-    height: 130px;
+    width: 1000px;
+    height: 100px;
 }
 
 .customer-header {
     position: relative;
-    width: 800px;
+    width: 1000px;
     height: 130px;
     border-top: 3px solid #cd7171;
 }
 
 .invoice-body {
     position: relative;
-    width: 800px;
-    height: 450px;
+    width: 1000px;
+    min-height: 200px;
 }
 
 .invoice-footer {
@@ -54,13 +63,13 @@ body {
 }
 
 .invoice-table {
-    width: 780px;
+    width: 1000px;
     margin:  0 auto;
     border-collapse: collapse;
     clear: both;
 }
 .invoice-table td {
-    padding: 0 5px;
+    padding: 0 5px !important;
 }
 .tr-line{
     border-top: 1px solid #e0e0e0;
@@ -70,7 +79,6 @@ body {
 
 .inv-list {
     float: left;
-    padding: 10px !important;
+    padding: 0 10px 0 0 !important;
     list-style: none;
 }
-
