--- a/css/login.css
+++ b/css/login.css
@@ -14,7 +14,8 @@ img {
 
 body {
     font-family: "Segoe UI Light", "Segoe UI", "Tahoma", "Arial", "Verdana", "sans-serif" !important;
-    background: #ffffff;
+    background: #fafafa;
+    background: #e8e8e8;
     font-weight: normal;
     color: #272727;
 }
@@ -24,8 +25,9 @@ body {
     height: 320px;
     background: #fff;
     font-size: 20px;
-    border: 1px solid #d9d9d9;
-    box-shadow: 0px 1px 5px rgba(0,0,0, 0.15);
+    *border: 1px solid #d9d9d9;
+    box-shadow: 0px 1px 5px rgba(0,0,0, 0.447);
+    z-index: 1;
 }
 
 .main-wrapper {
