--- a/css/login.css
+++ b/css/login.css
@@ -67,7 +67,7 @@ body {
     text-align: right;
     margin: 0 auto;
     font-size: 14px;
-    color: #a0a0a0;
+    color: #808080;
 }
 
 .button {
