--- a/css/sheet.css
+++ b/css/sheet.css
@@ -3,7 +3,7 @@
 	width: 100%;
 	height: 100px;
 	margin-bottom: 20px;
-	background: #3F3;
+
 }
 .page-logo {
 	position: relative;
@@ -16,6 +16,8 @@
 	margin: auto;
 	background: #930;
 }
-.page-logo p{
-	clear: both;
+.header-title{
+	width: 50%;
+	margin: 0px auto;
+	padding-left: 300px;
 	}
