--- a/css/sheet.css
+++ b/css/sheet.css
@@ -1,23 +1,49 @@
 /* CSS Document */
+p {
+   
+    margin: 5px !important;
+}
 .sheet-header {
-	width: 100%;
-	height: 100px;
-	margin-bottom: 20px;
-
+    width: 100%;
+    height: 150px;
 }
 .page-logo {
-	position: relative;
-	width: 200px;
-	height: 80px;
-	margin: 0 auto;
+    width: 200px;
+    height: 80px;
+    margin: 0 auto;
 }
+
 .page-logo img {
-	vertical-align: middle;
-	margin: auto;
-	background: #930;
+    display: table-cell;
+    vertical-align: central;
+    margin: 0 auto;
 }
+
 .header-title{
-	width: 50%;
-	margin: 0px auto;
-	padding-left: 300px;
-	}
+    width: 100%;
+}
+
+.header-title p {
+    margin: auto;
+    text-align: center;
+    font-size: 23px;
+    font-weight: bold;
+
+}
+
+.print-details {
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+.sheet-table {
+    clear: both;
+}
+
+.sheet-table tr:nth-child(even){
+    background: #fafafa;
+}
+
+.sheet-table tr:nth-child(odd){
+    background: #fff;
+}
