--- a/css/layout.css
+++ b/css/layout.css
@@ -533,6 +533,25 @@ textarea:focus {
     opacity: 0.3;
 }
 
+.validity {
+    position: absolute;
+    top: 206px;
+    left: 720px;
+    width: 25px;
+    height: 20px;
+    background: pink;
+}
+
+.correct {
+    background: url(../images/correct.png) no-repeat center center;
+    background-size: contain;
+}
+
+.incorrect {
+    background: url(../images/incorrect.png) no-repeat center center;
+    background-size: contain;
+}
+
 .report-list {
     width: 200px;
     list-style: none;
