--- a/css/invoice.css
+++ b/css/invoice.css
@@ -29,13 +29,14 @@ ul {
 .invoice-wrapper {
     width: 1060px;
     border: 1px solid #e0e0e0;
-    box-shadow: 0 1px 3px rgba(0,0,0, 0.2); 
+    box-shadow: 0 1px 3px 1px rgba(0,0,0, 0.15); 
 }
 .invoice {
     width: 1000px;
     padding: 10px 30px !important;
     clear: both;
     border-bottom: 1px dashed #000 !important;
+    background-color: #fff;
 }
 
 .company-header {
