--- a/css/layout.css
+++ b/css/layout.css
@@ -10,8 +10,8 @@ body {
     font: 100%/1.4 "Segoe UI Light", "Segoe UI", "Tahoma", "Arial", "Verdana", "sans-serif";
     margin: 0;
     padding: 0;
-    background-color: #ffffff;
-    color: #272727;  
+    background: url(../images/pattern_bg.jpg) transparent;
+    color: #272727;
 }
 
 .logo {
@@ -147,7 +147,6 @@ a:hover, a:active, a:focus {
 
 .container {
     width: 100%;
-    background-color: #fff;
 }
 
 .header {
@@ -164,7 +163,6 @@ a:hover, a:active, a:focus {
     float: left;
     width: 14%;
     position: fixed;
-    background-color: #ffffff;
     padding-bottom: 10px;
     margin-top: 80px;
 }
@@ -174,6 +172,7 @@ a:hover, a:active, a:focus {
     width: 86%;
     float: left;
     margin-left: 14%;
+    background: transparent;
 }
 
 /* ~~ This grouped selector gives the lists in the .content area space ~~ */
@@ -197,7 +196,6 @@ ul.nav a, ul.nav a:visited {
     padding: 5px 5px 5px 35px;
     display: block;
     text-decoration: none;
-    background-color: #FFF;
     color: #000;
 }
 
@@ -418,7 +416,7 @@ textarea:focus {
 .home-icon {
     width: 180px;
     height: 150px;
-    border: 1px #ffffff solid;
+    border: 1px transparent solid;
     margin: 40px 50px 0px 50px;
 }
 
@@ -607,9 +605,10 @@ textarea:focus {
     /*    background-color: #2599CF !important;
         color: #fff;*/
 }
-/*.selected:hover {
-    color: #fff !important;
-}*/
+
+.current {
+    background-color: #f1eded;
+}
 
 /* ~~ data table classes ~~ */
 
