--- a/css/login.css
+++ b/css/login.css
@@ -16,6 +16,7 @@ body {
     font-family: "Segoe UI Light", "Segoe UI", "Tahoma", "Arial", "Verdana", "sans-serif" !important;
     background: #fafafa;
     background: #e8e8e8;
+    background: url(../images/pattern_bg.jpg) transparent;
     font-weight: normal;
     color: #272727;
 }
@@ -26,7 +27,8 @@ body {
     background: #fff;
     font-size: 20px;
     *border: 1px solid #d9d9d9;
-    box-shadow: 0px 1px 5px rgba(0,0,0, 0.447);
+    box-shadow: 0px 1px 2px 4px rgba(0,0,0, 0.08);
+    border-radius: 1px;
     z-index: 1;
 }
 
