--- a/css/sheet.css
+++ b/css/sheet.css
@@ -10,7 +10,7 @@ body {
     font: 100%/1.4 "Segoe UI Light", "Segoe UI", "Tahoma", "Arial", "Verdana", "sans-serif";
     margin: 0;
     padding: 0;
-    background-color: #ffffff;
+    background: #fff;
     color: #272727;
 }
 
@@ -20,7 +20,7 @@ table {
 
 p {
 
-    margin: 5px !important;
+    margin: 5px !important; 
 }
 .sheet-header {
     width: 100%;
@@ -51,8 +51,16 @@ p {
 }
 
 .print-details {
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     font-weight: bold;
+}
+
+.black-separator {
+    width: 100%;
+    height: 2px;
+    background: #000;
+    margin-bottom: 15px;
+    clear: both;
 }
 
 .sheet-table {
@@ -74,10 +82,16 @@ p {
 
 @media print {
     body {
-        font-size: 80%;
+        font-size: 12px !important;
+        background: #fff;
     }
 
-    table {
-        page-break-after: avoid;
+    tr {
+        page-break-inside: avoid;
+    }
+
+    legend {
+        color: #000;
+        font-weight: bold;
     }
 }
