--- a/css/invoice.css
+++ b/css/invoice.css
@@ -67,6 +67,7 @@ ul {
     width: 1000px;
     height: 120px;
     border-top: 3px solid #cd7171;
+    clear: both;
 }
 
 .invoice-body {
@@ -113,7 +114,7 @@ ul {
 }
 
 @media print {
-    
+
     .invoice {
         padding-top: 25px;
         padding-bottom: 10px;
