--- a/css/layout.css
+++ b/css/layout.css
@@ -612,6 +612,13 @@ textarea:focus {
     background-color: #f1eded;
 }
 
+.report-wrapper {
+    padding: 20px 20px;
+    width: 1060px;
+    border: 1px solid #e0e0e0;
+    box-shadow: 0 1px 3px 1px rgba(0,0,0, 0.15); 
+}
+
 /* ~~ data table classes ~~ */
 
 .data-listing {
