--- a/css/layout.css
+++ b/css/layout.css
@@ -10,7 +10,7 @@ body {
     font: 100%/1.4 "Segoe UI Light", "Segoe UI", "Tahoma", "Arial", "Verdana", "sans-serif";
     margin: 0;
     padding: 0;
-    background: url(../images/pattern_bg.jpg) transparent;
+    background: url(../images/pattern_bg.jpg) transparent !important;
     color: #272727;
 }
 
@@ -616,6 +616,7 @@ textarea:focus {
     padding: 20px 20px;
     width: 1060px;
     border: 1px solid #e0e0e0;
+    background-color: #fff;
     box-shadow: 0 1px 3px 1px rgba(0,0,0, 0.15); 
 }
 
