--- a/css/login.css
+++ b/css/login.css
@@ -26,7 +26,7 @@ body {
     height: 320px;
     background: #fff;
     font-size: 20px;
-    border: 1px solid #e9e9e9;
+    border: 1px solid #d9d9d9;
     box-shadow: 0px 1px 2px 4px rgba(0,0,0, 0.08);
     border-radius: 1px;
 }
