--- a/css/login.css
+++ b/css/login.css
@@ -41,7 +41,7 @@ body {
     font-size: 30px;
     border: 1px solid #fff;
     background: url(../images/softbill_logo.png) no-repeat 20px center;
-    background-color: #ffc28b;
+    background-color: #00ccff;
     margin-bottom: 55px;
 }
 
