--- a/css/layout.css
+++ b/css/layout.css
@@ -153,8 +153,8 @@ a:hover, a:active, a:focus {
     height: 50px;
     width: 100%;
     position: fixed;
-    background-color: #ffc28b;
-    border-bottom: 1px solid #ffaa1e;
+    background-color: #00ccff;
+    border-bottom: 1px solid #0099ff;
     box-shadow: 0 2px 5px rgba(0,0,0, 0.25);
     z-index: 50;
 }
