--- a/css/forms.css
+++ b/css/forms.css
@@ -31,12 +31,22 @@ table {
 
 .data-form-wapper {
     width: 80%;
-    background: pink;
+    padding: 20px;
+    border: 1px solid #e0e0e0;
+    box-shadow: 0 1px 3px 1px rgba(0,0,0, 0.15); 
+    background: #fff;
 }
 
 .form-header {
     width: 100%;
     height: 200px;
     background: paleturquoise;
+}
+
+.data-group {
+    background-color: #e0e0e0;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
 }
 
