--- a/css/forms.css
+++ b/css/forms.css
@@ -52,6 +52,7 @@ h2 h5 {
     border: 1px solid #e0e0e0;
     box-shadow: 0 1px 3px 1px rgba(0,0,0, 0.15); 
     background: #fff;
+    overflow: hidden;
 }
 
 .not-editable {
