--- a/css/pop-up.css
+++ b/css/pop-up.css
@@ -23,6 +23,8 @@ body {
 
 .pop-up-wrapper {
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background: rgba(255,255,255, 0.7);
