--- a/css/login.css
+++ b/css/login.css
@@ -40,7 +40,7 @@ body {
     height: 50px;
     font-size: 30px;
     border: 1px solid #fff;
-    background: url(../images/softbill_logo.png) no-repeat 20px center;
+    background: url(../images/zanhid_logo.png) no-repeat 20px center;
     background-color: #00ccff;
     margin-bottom: 55px;
 }
