--- a/css/layout.css
+++ b/css/layout.css
@@ -17,7 +17,7 @@ body {
 .logo {
     width: 300px;
     height: 50px;
-    background: url(../images/softbill_logo.png) no-repeat 10px center;
+    background: url(../images/zanhid_logo.png) no-repeat 10px center;
     overflow: hidden;
 }
 
