--- a/css/layout.css
+++ b/css/layout.css
@@ -715,7 +715,7 @@ input[type='radio'], input[type=checkbox] {
 
 .report-wrapper {
     padding: 20px 20px;
-    width: 1020px;
+    width: 94.2%;
     border: 1px solid #e0e0e0;
     background-color: #fff;
     box-shadow: 0 1px 3px 1px rgba(0,0,0, 0.15); 
