--- a/css/layout.css
+++ b/css/layout.css
@@ -229,7 +229,7 @@ ul.nav ul a, ul.nav ul a:visited {
     background-size: 20px;
 }
 
-.applications {
+.backups {
     background: url(../images/appln.png) no-repeat 10px 5px;
     background-size: 20px;
 }
