--- a/css/layout.css
+++ b/css/layout.css
@@ -653,6 +653,10 @@ input[type='radio'], input[type=checkbox] {
     background-color: #f1eded;
 }
 
+#current {
+    background-color: #e9e9e9;
+}
+
 .report-wrapper {
     padding: 20px 20px;
     width: 94.2%;
