--- a/css/print.css
+++ b/css/print.css
@@ -97,7 +97,7 @@ table.two-groups .no-border td {
 
 .sheet-header {
     width: 100%;
-    height: 90px;
+    /*height: 90px;*/
 }
 .page-logo {
     width: 200px;
