--- a/css/forms.css
+++ b/css/forms.css
@@ -19,10 +19,6 @@ body {
     color: #272727;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-}
 
 h2 h5 {
     font-weight: bold;
@@ -79,11 +75,12 @@ h2 h5 {
     font-weight: bold;
 }
 
-.data-group {
+td.data-group {
     background-color: #ad343d;
     color: #fff;
     font-weight: bold;
-    text-align: center;
+    text-align: center !important;
+    vertical-align: central !important;
     width: 45px;
 }
 
@@ -92,10 +89,11 @@ h2 h5 {
     border-color: #d0d0d0;
 }
 
-.data-form-wapper  th {
+.data-form-wapper th, .summary th {
     background-color: #f1f1f1;
     font-weight: normal;
     border-color: #c0c0d0;
+    text-align: center;
 }
 
 .data-form-wapper .text {
